bonus/confs/app/will-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wil-app
  template:
    metadata:
      labels:
        app: wil-app
    spec:
      containers:
        - name: wil-app
          image: "wil42/playground:v1"
          ports:
          - containerPort: 8888
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: wil-app
spec:
  ports:
  - port: 80
    targetPort: 8888
    name: tcp
  selector:
    app: wil-app
